--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,26 +1,22 @@
-<header class="mb-4">
-  <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
-    <a class="navbar-brand" href="/">Microposts</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <% if logged_in? %>
-          <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user.name %></a>
-            <ul class="dropdown-menu dropdown-menu-right">
-              <li class="dropdown-item"><%= link_to 'My profile', user_path(current_user) %></li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method: :delete %></li>
-            </ul>
-          </li>
-        <% else %>
-          <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
-          <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
-        <% end %>
-      </ul>
+<div class="headerNav">
+  <div class="container">
+    <div class="row headerNavBox">
+      <a href="<%= root_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
+        トップページ
+      </a>
+      <div class="col-xs-12 col-sm-3 headerNavBtn" >
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">ユーザーを探す</a>
+        <ul class="dropdown-menu dropdown-menu-right">
+          <li class="dropdown-item"><%= link_to 'タグから探す', tags_path %></li>
+          <li class="dropdown-item"><%= link_to 'つぶやきから探す', posts_path %></li>
+        </ul>
+      </div>
+      <a href="<%= signup_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
+        新規登録
+      </a>
+      <a href="<%= login_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
+        ログイン
+      </a>
     </div>
-  </nav>
-</header>
+  </div>
+</div>
