--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      
+    
       <div class="main-container">
       <!--header-->
         <div class="header">
@@ -32,12 +32,13 @@
               </div>
           </div>
         </div>
+        
       <!--//header-->
       
         <% if logged_in? %>
           <%= render 'layouts/navbar_login' %>
         <% else %>
-          <%= render 'layouts/navbar2' %>
+          <%= render 'layouts/navbar' %>
         <% end %>
         
         <% unless logged_in? %>
