--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -11,7 +11,7 @@
       <%= render 'tag_relations/tag_add_button', tag: @tag if logged_in? %>
       
       <% if logged_in? && current_user.id == @tag.user.id %>
-        <%= link_to 'タグ削除', tag_path(@tag), method: :delete, class: 'btn btn-danger' %>
+        <%= link_to 'タグ削除', tag_path(@tag), method: :delete, class: 'btn btn-danger tag-delete-button' %>
       <% end %>
       
       <div>
