--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
       
       <div class="form-group">
         <%= f.label :avatar, 'avatar' %>
-        <%= f.file_field :avatar, class: 'form-control' %>
+        <%= f.file_field :avatar %>
       </div>
       
       <div class="form-group">
