--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -224,7 +224,7 @@ div#message-footer{
   position: relative;
 }
 
-.sita{
+.bottom{
   margin-top: 50px;
   background-image: image-url('tags.jpg');
   background-size: cover;
@@ -282,13 +282,13 @@ div#message-footer{
 	transform:		scale(1);
 }
 
-.sita .caption {
+.bottom .caption {
 	font-size:		130%;
 	color:			#fff;
 	padding-top:		80px;
 }
 
-.sita .mask {
+.bottom .mask {
 	width:			100%;
 	height:			100%;
 	position:		absolute;
@@ -301,7 +301,7 @@ div#message-footer{
 	transform:		scale(0);
 }
 
-.sita:hover .mask {
+.bottom:hover .mask {
 	-webkit-transform:	scale(1);
 	transform:		scale(1);
 }
