--- a/app/views/layouts/_navbar_login.html.erb
+++ b/app/views/layouts/_navbar_login.html.erb
@@ -1,19 +1,19 @@
 <div class="headerNav">
   <div class="container">
     <div class="row headerNavBox">
-      <a href="<%= root_path %>" class="col-xs-12 col-sm-4 headerNavBtn">
+      <a href="<%= root_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
         トップページ
       </a>
       
-      <div class="col-xs-12 col-sm-4 headerNavBtn" >
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">ユーザーを探す</a>
-        <ul class="dropdown-menu dropdown-menu-right">
-          <li class="dropdown-item"><%= link_to 'タグから探す', tags_path %></li>
-          <li class="dropdown-item"><%= link_to 'つぶやきから探す', posts_path %></li>
-        </ul>
-      </div>
+      <a href="<%= posts_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
+        つぶやき一覧
+      </a>
       
-      <div class="col-xs-12 col-sm-4 headerNavBtn" >
+      <a href="<%= tags_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
+        タグ一覧
+      </a>
+      
+      <div class="col-xs-12 col-sm-3 headerNavBtn" >
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %></a>
         <ul class="dropdown-menu dropdown-menu-right">
           <li class="dropdown-item"><%= link_to 'プロフィール', user_path(current_user) %></li>
