--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -38,7 +38,7 @@
       </div>
     </div>
     
-    <div class='sita' ontouchstart="">
+    <div class='bottom' ontouchstart="">
       <div class="mask">
         <p class="caption text-center">タグ機能、つぶやき機能</p>
         <div class="caption text-center">自分の得意な技術のタグに参加したり、つぶやいてみよう！</br>タグやつぶやきから気になるユーザーを探せます</div>
