--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,7 @@
         <%= form_tag(posts_path, method: :get) do %>
           <div class="form-group">
             <%= label_tag :search, '検索', class: 'search-label' %>
-            <%= text_field_tag :search,"", class:"form-control" , placeholder: 'キーワードを入力'%>
+            <%= text_field_tag :search, params[:search], class:"form-control" , placeholder: 'キーワードを入力'%>
           </div>
             <%= submit_tag '検索', class: "btn btn-primary btn-block search-button" %>
         <% end %>
