--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -8,7 +8,7 @@
           </div>
           <div class="card-body">
             <% if user.avatar.attached? %>
-              <%= image_tag user.avatar, size: '50x50' %>
+              <%= image_tag user.avatar, size: '50x50', class: "image-fit" %>
             <% else %>
               No image
             <% end %>
