--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center">
   <% if @user.avatar.attached? %>
-    <%= image_tag @user.avatar, size: '150x150' %>
+    <%= image_tag @user.avatar, size: '150x150', class: "image-fit" %>
   <% end %>
     <p><%= @user.name %></p>
   <% if logged_in? && current_user.id != @user.id %>
