--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -40,7 +40,7 @@
   <div class='bottom' ontouchstart="">
     <div class="mask">
       <p class="caption text-center">タグ機能、つぶやき機能</p>
-      <div class="caption text-center">自分の得意な技術のタグに参加したり、つぶやいてみよう！</br>タグやつぶやきから気になるユーザーを探せます！</div>
+      <div class="caption text-center">自分の得意な技術のタグに参加したり、つぶやいてみよう！</br>タグやつぶやきから気になるユーザーを探せます</div>
     </div>
   </div>
   
