--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -1,11 +1,11 @@
 <% unless current_user == user %>
   <% if current_user.following?(user) %>
-    <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete) do |f| %>
+    <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete, remote: true) do |f| %>
       <%= hidden_field_tag :follow_id, user.id %>
       <%= f.submit 'いいね解除', class: 'btn btn-danger' %>
     <% end %>
   <% else %>
-    <%= form_with(model: current_user.relationships.build, local: true) do |f| %>
+    <%= form_with(model: current_user.relationships.build, local: true, remote: true) do |f| %>
       <%= hidden_field_tag :follow_id, user.id %>
       <%= f.submit 'いいね！', class: 'btn btn-primary' %>
     <% end %>
