--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -21,7 +21,7 @@
         <div class="form-group"> 
           <%= f.label :title, 'タグ名' %>
           <%= f.text_field :title, class: 'form-control' %>
-          <%= f.label :content, '紹介文' %>
+          <%= f.label :content, '好きをアピール or 一言コメント' %>
           <%= f.text_field :content, class: 'form-control' %>
           <%= f.label :image, '画像' %>
           <%= f.file_field :image %>
