--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
       <%= render 'layouts/error_messages', model: f.object %>
       
       <div class="form-group">
-        <%= f.label :avatar, 'avatar' %>
+        <%= f.label :avatar, 'アイコンを選択' %>
         <%= f.file_field :avatar %>
       </div>
       
